Fixes used partition space argument desc

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1847,12 +1847,12 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 4
         }
         "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an integer value."
+            description = "Used to specify a Warning threshold. This can either be a byte-value type like '10GB' or a %-value, like '10%'"
             value = "$IcingaCheckUsedPartitionSpace_Object_Warning$"
             order = 2
         }
         "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an integer value."
+            description = "Used to specify a Critical threshold. This can either be a byte-value type like '10GB' or a %-value, like '10%'"
             value = "$IcingaCheckUsedPartitionSpace_Object_Critical$"
             order = 3
         }
