Fixes docs for used partition space

--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -21,7 +21,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\\','D:\\'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:','D:'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                     if (len(arr) == 0) {
@@ -57,7 +57,7 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:\\','D:\\'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:','D:'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                     if (len(arr) == 0) {
