Adds additional checks for task plugin

--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -2,9 +2,37 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
     import "PowerShell Base"
 
     arguments += {
+        "-WarningNextRunTime" = {
+            description = "Allows to specify a time interval, on which the check will return warning based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
+            value = "$IcingaCheckScheduledTask_String_WarningNextRunTime$"
+            order = 8
+        }
+        "-CriticalNextRunTime" = {
+            description = "Allows to specify a time interval, on which the check will return critical based on the next run time of a task and the current time. The value will be added to the current time  Values have to be specified as time units like, 10m, 1d, 1w, 2M, 1y"
+            value = "$IcingaCheckScheduledTask_String_CriticalNextRunTime$"
+            order = 9
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
+            order = 99
+        }
         "-C" = {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckScheduledTask' "
             order = 0
+        }
+        "-ThresholdInterval" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckScheduledTask_String_ThresholdInterval$"
+            order = 100
+        }
+        "-WarningMissedRuns" = {
+            description = "Defines a warning threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
+            value = "$IcingaCheckScheduledTask_Object_WarningMissedRuns$"
+            order = 4
+        }
+        "-IgnoreLastRunTime" = {
+            set_if = "$IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime$"
+            order = 99
         }
         "-TaskName" = {
             description = "A list of tasks to check for. If your tasks contain spaces, wrap them around a ' to ensure they are properly handled as string"
@@ -28,19 +56,15 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             }}
             order = 2
         }
-        "-ThresholdInterval" = {
-            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
-            value = "$IcingaCheckScheduledTask_String_ThresholdInterval$"
-            order = 100
+        "-CriticalLastRunTime" = {
+            description = "Allows to specify a time interval, on which the check will return critical based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
+            value = "$IcingaCheckScheduledTask_String_CriticalLastRunTime$"
+            order = 7
         }
-        "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
-            order = 4
-        }
-        "-NoPerfData" = {
-            set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
-            order = 99
+        "-CriticalMissedRuns" = {
+            description = "Defines a critical threshold for missed runs for filtered tasks.  Supports Icinga default threshold syntax."
+            value = "$IcingaCheckScheduledTask_Object_CriticalMissedRuns$"
+            order = 5
         }
         "-State" = {
             description = "The state a task should currently have for the plugin to return [OK]"
@@ -64,6 +88,17 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             }}
             order = 3
         }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
+            order = 10
+        }
+        "-WarningLastRunTime" = {
+            description = "Allows to specify a time interval, on which the check will return warning based on the last run time of a task and the current time. The value will be subtracted from the current time  Values have to be specified as time units like, -10m, -1d, -1w, -2M, -1y"
+            value = "$IcingaCheckScheduledTask_String_WarningLastRunTime$"
+            order = 6
+        }
     }
     vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
+    vars.IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime = false
 }
