Add switch for PerfCounter check, ignoring unknown

--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -30,12 +30,16 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             order = 5
         }
         "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an ??? value."
+            description = "Used to specify a Warning threshold."
             value = "$IcingaCheckPerfCounter_Object_Warning$"
             order = 3
         }
+        "-IgnoreEmptyChecks" = {
+            set_if = "$IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks$"
+            order = 99
+        }
         "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an ??? value."
+            description = "Used to specify a Critical threshold."
             value = "$IcingaCheckPerfCounter_Object_Critical$"
             order = 4
         }
@@ -53,5 +57,6 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             order = 0
         }
     }
+    vars.IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks = false
     vars.IcingaCheckPerfCounter_Switchparameter_NoPerfData = false
 }
