--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1776,12 +1776,16 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             order = 5
         }
         "-Warning" = {
-            description = "Used to specify a Warning threshold. In this case an ??? value."
+            description = "Used to specify a Warning threshold."
             value = "$IcingaCheckPerfCounter_Object_Warning$"
             order = 3
         }
+        "-IgnoreEmptyChecks" = {
+            set_if = "$IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks$"
+            order = 99
+        }
         "-Critical" = {
-            description = "Used to specify a Critical threshold. In this case an ??? value."
+            description = "Used to specify a Critical threshold."
             value = "$IcingaCheckPerfCounter_Object_Critical$"
             order = 4
         }
@@ -1799,6 +1803,7 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             order = 0
         }
     }
+    vars.IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks = false
     vars.IcingaCheckPerfCounter_Switchparameter_NoPerfData = false
 }
 
