Adds plugin docs for v1.6.0

--- a/config/icinga/Invoke-IcingaCheckICMP.conf
+++ b/config/icinga/Invoke-IcingaCheckICMP.conf
@@ -16,7 +16,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
+            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -59,7 +59,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
