Adds optional website content to http check

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -513,6 +513,10 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             value = "$IcingaCheckHTTPStatus_String_Username$"
             order = 8
         }
+        "-AddOutputContent" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_AddOutputContent$"
+            order = 99
+        }
         "-C" = {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckHTTPStatus' "
             order = 0
@@ -610,8 +614,9 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 4
         }
     }
-    vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
 }
 
 object CheckCommand "Invoke-IcingaCheckNLA" {
@@ -1657,7 +1662,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
+            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -1700,7 +1705,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Threshold on which the plugin will return 'CRITICAL' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -1847,7 +1852,7 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 7
         }
         "-WarningTotal" = {
-            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 6
         }
