--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -64,6 +64,10 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             value = "$IcingaCheckHTTPStatus_String_Username$"
             order = 8
         }
+        "-AddOutputContent" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_AddOutputContent$"
+            order = 99
+        }
         "-C" = {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckHTTPStatus' "
             order = 0
@@ -161,6 +165,7 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 4
         }
     }
-    vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
     vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
 }
