Adds used monitoring for UNC plugin

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1865,12 +1865,17 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             set_if = "$IcingaCheckUNCPath_Switchparameter_NoPerfData$"
             order = 99
         }
+        "-CheckUsedSpace" = {
+            set_if = "$IcingaCheckUNCPath_Switchparameter_CheckUsedSpace$"
+            order = 99
+        }
         "-DisplayAlias" = {
             description = "Modifies the plugin output to not display the value provided within the `-Path` argument but to use this string value instead of shorten the output and make it more visual appealing."
             value = "$IcingaCheckUNCPath_String_DisplayAlias$"
             order = 3
         }
     }
+    vars.IcingaCheckUNCPath_Switchparameter_CheckUsedSpace = false
     vars.IcingaCheckUNCPath_Switchparameter_NoPerfData = false
 }
 
