--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -6,15 +6,41 @@ object CheckCommand "Invoke-IcingaCheckService" {
             value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckService' "
             order = 0
         }
-        "-Verbosity" = {
-            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
-            value = "$IcingaCheckService_Int32_Verbosity$"
-            order = 5
+        "-MitigateUnknown" = {
+            set_if = "$IcingaCheckService_Switchparameter_MitigateUnknown$"
+            order = 99
         }
         "-ThresholdInterval" = {
             description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
             value = "$IcingaCheckService_String_ThresholdInterval$"
             order = 100
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckService_Int32_Verbosity$"
+            order = 6
+        }
+        "-FilterStartupType" = {
+            description = "Allows to include only services with a specific startup type inside the monitoring, in case you check for a list of specific services by using `-Service`"
+            value = {{
+                var arr = macro("$IcingaCheckService_Array_FilterStartupType$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 5
         }
         "-Status" = {
             description = "Status for the specified service or services to check against."
@@ -71,4 +97,5 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
     }
     vars.IcingaCheckService_Switchparameter_NoPerfData = false
+    vars.IcingaCheckService_Switchparameter_MitigateUnknown = false
 }
