Adds new process check plugin

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1183,6 +1183,144 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
     vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
 }
 
+object CheckCommand "Invoke-IcingaCheckProcess" {
+    import "PowerShell Base"
+
+    arguments += {
+        "-TotalThreadCountCritical" = {
+            description = "Compares thread usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalThreadCountCritical$"
+            order = 17
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckProcess_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
+            value = "$IcingaCheckProcess_Int32_Verbosity$"
+            order = 21
+        }
+        "-TotalThreadCountWarning" = {
+            description = "Compares thread usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalThreadCountWarning$"
+            order = 16
+        }
+        "-MemoryWarning" = {
+            description = "Compares each single process memory usage against the given threshold. Will throw warning if exceeded. Supports % unit to compare the process memory usage for the entire memory space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_MemoryWarning$"
+            order = 4
+        }
+        "-Process" = {
+            description = "Allows to filter for a list of processes with a given name. Use the process name without file ending, like '.exe'."
+            value = {{
+                var arr = macro("$IcingaCheckProcess_Array_Process$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 20
+        }
+        "-TotalCPUWarning" = {
+            description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalCPUWarning$"
+            order = 14
+        }
+        "-TotalMemoryWarning" = {
+            description = "Compares memory usage for all processes with the same name against the given threshold. Will throw warning if exceeded. Supports % unit to compare the total process memory usage for the entire memory space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalMemoryWarning$"
+            order = 12
+        }
+        "-C" = {
+            value = "try { Use-Icinga -Minimal; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; Write-Output 'Error:' $$($$_.Exception.Message)Components:`r`n$$( Get-Module -ListAvailable 'icinga-powershell-*' )`r`n'Module-Path:'`r`n$$($$Env:PSModulePath); exit 3; }; Exit-IcingaExecutePlugin -Command 'Invoke-IcingaCheckProcess' "
+            order = 0
+        }
+        "-ThresholdInterval" = {
+            description = "Change the value your defined threshold checks against from the current value to a collected time threshold of the Icinga for Windows daemon, as described here: https://icinga.com/docs/icinga-for-windows/latest/doc/service/10-Register-Service-Checks/ An example for this argument would be 1m or 15m which will use the average of 1m or 15m for monitoring."
+            value = "$IcingaCheckProcess_String_ThresholdInterval$"
+            order = 100
+        }
+        "-PageFileCritical" = {
+            description = "Compares each single process page file usage against the given threshold. Will throw critical if exceeded. Supports % unit to compare the process page file usage for the entire page file space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_PageFileCritical$"
+            order = 3
+        }
+        "-CPUWarning" = {
+            description = "Compares each single process cpu usage against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_CPUWarning$"
+            order = 6
+        }
+        "-TotalPageFileWarning" = {
+            description = "Compares page file usage for all processes with the same name against the given threshold. Will throw warning if exceeded. Supports % unit to compare the total process page file usage for the entire page file space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalPageFileWarning$"
+            order = 10
+        }
+        "-ThreadCountWarning" = {
+            description = "Compares each single process thread usage against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_ThreadCountWarning$"
+            order = 8
+        }
+        "-TotalProcessCountWarning" = {
+            description = "Compares process count for all processes with the same name against the given threshold. Will throw warning if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalProcessCountWarning$"
+            order = 18
+        }
+        "-CPUCritical" = {
+            description = "Compares each single process cpu usage against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_CPUCritical$"
+            order = 7
+        }
+        "-TotalCPUCritical" = {
+            description = "Compares cpu usage for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
+            order = 15
+        }
+        "-MemoryCritical" = {
+            description = "Compares each single process memory usage against the given threshold. Will throw critical if exceeded. Supports % unit to compare the process memory usage for the entire memory space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_MemoryCritical$"
+            order = 5
+        }
+        "-PageFileWarning" = {
+            description = "Compares each single process page file usage against the given threshold. Will throw warning if exceeded. Supports % unit to compare the process page file usage for the entire page file space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_PageFileWarning$"
+            order = 2
+        }
+        "-TotalProcessCountCritical" = {
+            description = "Compares process count for all processes with the same name against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalProcessCountCritical$"
+            order = 19
+        }
+        "-TotalPageFileCritical" = {
+            description = "Compares page file usage for all processes with the same name against the given threshold. Will throw critical if exceeded. Supports % unit to compare the total process page file usage for the entire page file space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalPageFileCritical$"
+            order = 11
+        }
+        "-TotalMemoryCritical" = {
+            description = "Compares memory usage for all processes with the same name against the given threshold. Will throw critical if exceeded. Supports % unit to compare the total process memory usage for the entire memory space available.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_TotalMemoryCritical$"
+            order = 13
+        }
+        "-ThreadCountCritical" = {
+            description = "Compares each single process thread usage against the given threshold. Will throw critical if exceeded.  Follows the Icinga Plugin threshold guidelines."
+            value = "$IcingaCheckProcess_Object_ThreadCountCritical$"
+            order = 9
+        }
+    }
+    vars.IcingaCheckProcess_Switchparameter_NoPerfData = false
+}
+
 object CheckCommand "Invoke-IcingaCheckCheckSum" {
     import "PowerShell Base"
 
@@ -1662,7 +1800,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-WarningPl" = {
-            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
+            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -1847,12 +1985,12 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
             order = 8
         }
         "-CriticalTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A critical threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
             order = 7
         }
         "-WarningTotal" = {
-            description = "A warning threshold for the shares total free space in byte units, like '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
+            description = "A warning threshold for the shares free space in either % or byte units, like '20%:' or '50GB:' Please note that this value is decreasing over time, therefor you will have to use the plugin handler and add ':' at the end of your input to check for 'current value < threshold' like in the previous example  Allowed units: %, B, KB, MB, GB, TB, PB, KiB, MiB, GiB, TiB, PiB"
             value = "$IcingaCheckUNCPath_Object_WarningTotal$"
             order = 6
         }
@@ -2444,7 +2582,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 99
         }
         "-CriticalOther" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for all other updates on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalOther$"
             order = 12
         }
@@ -2473,12 +2611,12 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 3
         }
         "-CriticalDefender" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the Microsoft Defender update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalDefender$"
             order = 10
         }
         "-CriticalRollups" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the rollup update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalRollups$"
             order = 8
         }
@@ -2515,7 +2653,7 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
             order = 5
         }
         "-CriticalSecurity" = {
-            description = "The critical threshold for the total pending update count on the Windows machine"
+            description = "The critical threshold for the security update count on the Windows machine"
             value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
             order = 6
         }
